--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "switch-button-deploy",
-  "version": "1.1.2",
+  "name": "ws-switch-button",
+  "version": "0.0.0-development",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.umd.cjs",
